Remove remote_theme dependency, rebuild layout with flexbox, fix sidebar overlap

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -296,8 +296,9 @@ a:hover small {
 }
 
 .wrapper {
-  width:1080px;
-  margin:0 auto;
+  display: flex;
+  max-width: 1150px;
+  margin: 0 auto;
 }
 
 blockquote {
@@ -356,14 +357,15 @@ img {
 }
 
 header {
-  width:400px;
-  float:left;
-  position:fixed;
-  -webkit-font-smoothing:subpixel-antialiased;
-  padding-top:4.0em;
-  text-align:center;
+  width: 470px;
+  flex-shrink: 0;
+  position: sticky;
+  top: 0;
+  -webkit-font-smoothing: subpixel-antialiased;
+  padding-top: 4.0em;
+  text-align: center;
   overflow-y: auto;
-  max-height: 95vh;
+  max-height: 100vh;
   box-sizing: border-box;
   padding-bottom: 1.0em;
 }
@@ -436,10 +438,10 @@ header ul a strong {
 }
 
 section {
-  width:650px;
-  float:right;
-  padding-top:4.0em;
-  padding-bottom:50px;
+  flex: 1;
+  max-width: 650px;
+  padding-top: 4.0em;
+  padding-bottom: 50px;
 }
 
 small {
@@ -454,34 +456,36 @@ hr {
 }
 
 footer {
-  width:400px;
-  float:left;
-  position:fixed;
-  bottom:30px;
-  -webkit-font-smoothing:subpixel-antialiased;
-  text-align:center;
+  width: 470px;
+  flex-shrink: 0;
+  -webkit-font-smoothing: subpixel-antialiased;
+  text-align: center;
 }
 
 @media print, screen and (max-width: 960px) {
 
   .pub-row {
-  display: flex; 
+  display: flex;
   align-items: center;}
 
-  div.wrapper {
-    width:auto;
-    margin:0;
+  .wrapper {
+    flex-direction: column;
+    margin: 0;
   }
 
-
   header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
+    float: none;
+    position: static;
+    width: 100%;
+    max-width: 100%;
+    flex-shrink: 1;
   }
 
   header {
-    padding-right:320px;
+    padding-right: 0;
+    max-height: none;
+    overflow-y: visible;
+    position: static;
   }
 
   section {
